[package]
name = "term-rend-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24"
image = "0.24.6"
show-image = { version = "0.13.1", features = ["image"] }
rayon = "1.7.0"
rand = "0.8.5"